Alignment issue fixed

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -651,6 +651,7 @@ HOME BODY*/
         position: relative;
         margin-top: 25px;
         margin-right: 20px;
+        margin-left: 120px;
         line-height: 15px;
     }
 .alert-panel {
